--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,7 +19,7 @@ android {
     }
     
     buildTypes.each {
-        it.buildConfigField 'String', 'OPEN_WEATHER_MAP_API_KEY', '"f434aa218141524b82bfdcdf8d825315"'
+        it.buildConfigField 'String', 'OPEN_WEATHER_MAP_API_KEY', 
     }
 }
 
