--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,7 +37,9 @@
 
         <provider
             android:name=".data.WeatherProvider"
-            android:authorities="com.example.android.Sunshine-Version-2.app" />
+            android:authorities="@string/content_authority"
+            android:exported="false"
+            android:syncable="true" />
 
     </application>
 
