--- a/gradle.properties
+++ b/gradle.properties
@@ -17,5 +17,5 @@
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 
-MyOpenWeatherMapApiKey = '"f434aa218141524b82bfdcdf8d825315"'
+MyOpenWeatherMapApiKey = "f434aa218141524b82bfdcdf8d825315"
 
