--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
         <activity
-            android:name="com.classic.android.sunshine.app.MainActivity"
+            android:name="com.classic.android.sunshine.app.Activities.MainActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -18,24 +18,24 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.classic.android.sunshine.app.DetailActivity"
+            android:name="com.classic.android.sunshine.app.Activities.DetailActivity"
             android:label="@string/title_activity_detail"
-            android:parentActivityName="com.classic.android.sunshine.app.MainActivity">
+            android:parentActivityName="com.classic.android.sunshine.app.Activities.MainActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.classic.android.sunshine.app.MainActivity" />
+                android:value="com.classic.android.sunshine.app.Activities.MainActivity" />
         </activity>
         <activity
-            android:name="com.classic.android.sunshine.app.SettingsActivity"
+            android:name="com.classic.android.sunshine.app.Activities.SettingsActivity"
             android:label="@string/title_activity_settings"
-            android:parentActivityName="com.classic.android.sunshine.app.MainActivity">
+            android:parentActivityName="com.classic.android.sunshine.app.Activities.MainActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.classic.android.sunshine.app.MainActivity" />
+                android:value="com.classic.android.sunshine.app.Activities.MainActivity" />
         </activity>
 
         <provider
-            android:name="com.classic.android.sunshine.app.data.WeatherProvider"
+            android:name="com.classic.android.sunshine.app.DataBase.WeatherProvider"
             android:authorities="@string/content_authority"
             android:exported="true"
             android:syncable="true"
